chore(ui): merge @soidid other works

--- a/public/ui/css/style.css
+++ b/public/ui/css/style.css
@@ -116,7 +116,8 @@ input{
   font-size: 16px;
   font-weight: 700;
 
-  padding-right: 60px;
+  /* padding-right: 60px; */
+  /* This only needed for functional buttons */
 
 }
 .q_function {
@@ -124,25 +125,28 @@ input{
 }
 .q_item:hover .q_function{
   display: inline-block;
-  position: absolute;
-  top:0px;
-  right: 10px;
-
   z-index: 99;
-
-  text-align: right;
-  height: 40px;
-  background: white;
-
-  box-sizing: border-box;
-
-  padding-top: 10px;
 
 }
 .q_order {
   font-weight: 500;
   width: 20px;
   margin-left: 10px;
+}
+.q_title_mobile_inner {
+  padding-left: 10px;
+  font-size: 20px;
+  font-weight: 700;
+  display: none;
+
+}
+@media screen and (max-width: 600px){
+  .q_order {
+    display: none;
+  }
+  .q_title_mobile_inner {
+    display: block;
+  }
 }
 .q_vote {
   width: 70px;
@@ -350,4 +354,120 @@ a.button.facebook{
 .c_title {
   font-size: 22px;
   font-weight: 600;
+}
+/* ------------------------------------------------------------ */
+/* sidebar
+/* ------------------------------------------------------------ */
+
+#sidebar-container{
+  z-index: 400;
+  width: 100%;
+  height: 0px;
+  overflow: hidden;
+  background: white;
+  position: absolute;
+  text-align: center;
+}
+#sidebar-container.show{
+  top: 50px;
+  height: 100%;
+
+}
+a.nav_item_sidebar {
+  display: block;
+  padding: 10px;
+  color: #009688;
+  border-bottom: 1px solid rgb(240,240,240);
+
+}
+a.nav_item_sidebar:hover {
+  background: rgb(220,220,220);
+}
+
+
+/* Stroke */
+.tri-up:before {
+  top: 43px;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  }
+/* Fill */
+.tri-up:after {
+  top: 42px;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid white;
+}
+.nav_list_toggle {
+  position: absolute;
+  cursor: pointer;
+  top: 14px;
+  right: 20px;
+}
+@media screen and (min-width: 600px){
+  .nav_list_toggle {
+    left: 20px;
+  }
+  #sidebar-container{
+    z-index: 99;
+    width: 300px;
+    height: 100%;
+    background: white;
+    position: absolute;
+    top: 50px;
+    left: -300px;
+    box-shadow: 0 0 6px rgba(0,0,0,.16),0 6px 12px rgba(0,0,0,.32);
+    text-align: left;
+
+    transition-property: all;
+    transition-duration: .5s;
+    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+  }
+  #sidebar-container.show{
+    top: 50px;
+    left:0px;
+    overflow: auto;
+
+  }
+
+}
+
+/* ------------------------------------------------------------ */
+/* compose
+/* ------------------------------------------------------------ */
+
+.ask_item {
+  background-color: #db4437;
+  height: 56px;
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  width: 56px;
+
+  border-radius: 50%;
+  box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
+  box-sizing: content-box;
+  cursor: pointer;
+  padding: 0;
+  z-index: 100;
+  text-align: center;
+}
+.ask_icon {
+  color: white;
+  font-size: 30px;
+  padding-top: 20px;
+}
+/* ------------------------------------------------------------ */
+/* index
+/* ------------------------------------------------------------ */
+.index_cover {
+  width: 100%;
+}
+.color_yellow {
+  background: #FFEB3B;
+}
+.index_title {
+  font-size: 20px;
+  font-weight: 700;
 }
