--- a/public/ui/partials/index.html
+++ b/public/ui/partials/index.html
@@ -1,6 +1,17 @@
-<div ng-include="'partials/nav.html'"></div>
+<div ng-include="'partials/nav.html'" ng-controller="NavCtrl"></div>
 
 <div id="content">
+<div class="page_wrapper">
+	<img class="index_cover" src="images/cover.jpg">
+</div>
+<div class="page_wrapper color_yellow">
+	<div class="wrapper color_yellow">
+      <div class="index_title">市長，給問嗎 x 蘋果日報 x 台北市長候選人 x 政策問答大亂鬥！</div>
+
+	</div>
+
+</div>
+
 
 <div class="wrapper">
 
