add pre/next page ctrl

--- a/public/ui/partials/index.html
+++ b/public/ui/partials/index.html
@@ -1,26 +1,25 @@
 <div ng-include="'partials/nav.html'" ng-controller="NavCtrl"></div>
 
 <div id="content">
-<div class="page_wrapper">
-	<img class="index_cover" src="images/cover.jpg">
-</div>
-<div class="page_wrapper color_yellow">
-	<div class="wrapper color_yellow">
-      <div class="index_title">市長，給問嗎 x 蘋果日報 x 台北市長候選人 x 政策問答大亂鬥！</div>
-
-	</div>
-
-</div>
-
-
-<div class="wrapper">
-
-    <div ng-repeat="p in policy" class="md-whiteframe-z1 c_item l_inline v_top" ng-click="go('policy/'+p.id)">
-        <div class="c_indexTitle">{{p.indexTitle}}</div>
-        <div class="c_title">{{p.title}}</div>
-
+    <div class="page_wrapper">
+    	<img class="index_cover" src="images/cover.jpg">
+    </div>
+    <div class="page_wrapper color_yellow">
+    	<div class="wrapper color_yellow">
+          <div class="index_title">市長，給問嗎 x 蘋果日報 x 台北市長候選人 x 政策問答大亂鬥！</div>
+    	</div>
     </div>
 
 
-</div>
+    <div class="wrapper">
+       <h3>遊戲規則說明</h3>
+    </div>
+
+    <div class="wrapper">
+    </div>
+    <div class="wrapper l_center">
+        <div ng-repeat="c in candidate" class="index_c_item md-whiteframe-z1" ng-click="go('policy/'+c.id)">
+        	<img ng-src="images/candidates/{{c.id}}.jpg">
+        </div>
+    </div>
 </div>
