--- a/public/ui/css/style.css
+++ b/public/ui/css/style.css
@@ -40,13 +40,13 @@ a {
   }
 }
 .page_wrapper {
-   background: white;
+  background: white;
+  height: 100%;
 }
 .wrapper {
   padding-top: 15px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 15px;
   padding:8px;
   box-sizing: border-box;
   position: relative;
@@ -432,7 +432,21 @@ a.nav_item_sidebar:hover {
   }
 
 }
+.nav_list_candidate {
+  position: relative;
+  display: inline-block;
+  padding-top: 6px;
+  cursor: pointer;
+}
+@media screen and (min-width: 600px){
+  .nav_list_candidate {
+    position: relative;
+    display: inline-block;
+    margin-left: 40px;
+    padding-top: 8px;
+  }
 
+}
 /* ------------------------------------------------------------ */
 /* compose / ask question
 /* ------------------------------------------------------------ */
@@ -474,8 +488,8 @@ a.nav_item_sidebar:hover {
   position: fixed;
   right: 10px;
   bottom: 0px;
-}
 
+}
 .ask_form_title {
   background: #2196F3;
   color: white;
@@ -505,16 +519,19 @@ a.nav_item_sidebar:hover {
 .ask_form_content {
   background: #EEEEEE;
   height: 100%;
+
 }
 .ask_form_content textarea {
   width: 100%;
-  height: 300px;
+  min-height: 280px;
   padding: 10px;
   border: 0px;
   resize: none;
+  box-sizing: border-box;
 }
 .ask_from_functions {
   padding: 10px;
+
 }
 .ask_from_functions .button {
   background: #2196F3;
@@ -545,7 +562,7 @@ a.nav_item_sidebar:hover {
     resize: none;
   }
   .ask_from_functions {
-    position: fixed;
+    position: absolute;
     bottom: 0px;
     left: 0px;
     width: 100%;
@@ -561,7 +578,33 @@ a.nav_item_sidebar:hover {
 .color_yellow {
   background: #FFEB3B;
 }
+.color_white {
+  background: white;
+}
 .index_title {
   font-size: 20px;
   font-weight: 700;
+}
+.index_c_item {
+  background: white;
+  display: inline-block;
+  padding: 10px;
+  cursor: pointer;
+  margin: 5px;
+}
+/* ------------------------------------------------------------ */
+/* page button left & right
+/* ------------------------------------------------------------ */
+.page_button {
+  cursor: pointer;
+  position: fixed;
+  top: 48%;
+  font-size: 30px;
+  /* z-index: 99; if mobile*/
+}
+.page_right {
+  right: 10px;
+}
+.page_left {
+  left: 10px;
 }
