remodel policy data: candidateID/policies

--- a/public/ui/partials/nav.html
+++ b/public/ui/partials/nav.html
@@ -1,7 +1,8 @@
 
 <div id="sidebar-container" ng-class="{'show':sidebar, 'hide':!sidebar}">
-	 <a class="nav_item_sidebar" ng-click="showsidebar(false)" href="#/">首頁</a>
-    <a class="nav_item_sidebar" ng-click="showsidebar(false)" href="#/policy/{{p.id}}" ng-repeat="p in policy">{{p.indexTitle}} {{p.title}}</a>
+
+	<a class="nav_item_sidebar" ng-click="showsidebar(false)" href="#/">首頁</a>
+    <a class="nav_item_sidebar" ng-click="showsidebar(false)" href="#/policy/{{candidate.id}}/{{p.id}}" ng-repeat="p in policy">{{p.indexTitle}} {{p.title}}</a>
 
 
 </div>
