add some test data for DIFFERENT policy DIFFERENT questions

--- a/public/ui/partials/nav.html
+++ b/public/ui/partials/nav.html
@@ -10,7 +10,11 @@
 <header class="md-whiteframe-z1">
 
   <div class="tri-up" ng-show="sidebar"></div>
+
   <div class="nav_list_toggle l_inline" ng-click="showsidebar('toggle')"><i class="fa fa-align-justify"></i></div>
+
+  <div class="nav_list_logo l_inline" ng-click="go('.')">市長給問嗎 x 最後一役</div>
+
   <div class="nav_list_function">
 
     <div class="nav_list_function_item l_inline" ng-click="toggleCandidateMenu()">
