--- a/public/ui/css/style.css
+++ b/public/ui/css/style.css
@@ -416,6 +416,13 @@ a.nav_item_sidebar:hover {
   top: 14px;
   left: 20px;
 }
+.nav_list_logo {
+  position: absolute;
+  cursor: pointer;
+  top: 14px;
+  left: 60px;
+  font-weight: 700;
+}
 @media screen and (min-width: 600px){
 
   #sidebar-container{
