--- a/public/ui/css/style.css
+++ b/public/ui/css/style.css
@@ -581,12 +581,17 @@ a.nav_item_sidebar:hover {
   resize: none;
   box-sizing: border-box;
 }
-.ask_from_functions {
+.ask_form_functions {
   padding: 10px;
 
 }
-.ask_from_functions .button {
+.ask_form_functions .button {
   background: #2196F3;
+}
+.ask_form_functions .ask_form_trash {
+  float: right;
+  font-size: 20px;
+  cursor: pointer;
 }
 @media screen and (max-width: 600px){
   .ask_form {
