--- a/public/ui/partials/policy.html
+++ b/public/ui/partials/policy.html
@@ -44,9 +44,12 @@
 
           <div class="ask_form_content">
               <textarea placeholder="問題說明：您可以在此進一步說明您的問題"></textarea>
-              <div class="ask_from_functions">
+              <div class="ask_form_functions">
                 <a class="button"><i class="fa fa-bullhorn"></i> 送出</a>
+                <span class="ask_form_trash"><i class='fa fa-trash-o'></i></span>
               </div>
+
+
           </div>
 
       </div>
