--- a/public/ui/css/style.css
+++ b/public/ui/css/style.css
@@ -160,8 +160,12 @@ input{
   width: 100%;
   padding-left: 10px;
   font-size: 14px;
-  margin-bottom: 20px;
-
+}
+a.q_postmeta {
+  color: rgb(55,53,54);
+}
+a.q_postmeta:hover {
+  color: #03A9F4;
 }
 .q_action {
   margin: 20px 10px;
@@ -505,7 +509,7 @@ a.nav_item_sidebar:hover {
   height: 50px;
   width: 120px;
   overflow: hidden;
-  white-space:nowrap;
+  white-space: nowrap;
   text-overflow: ellipsis;
 
 }
