--- a/public/ui/partials/nav.html
+++ b/public/ui/partials/nav.html
@@ -37,7 +37,11 @@
         </div>
     </div>
   </div>
-  <!-- <input class="fs" ng-model="query"><i class="fa fa-search"></i>-->
+  <div class="nav_search">
+    <div class="nav_search_inner">
+       <input class="fs" ng-model="query"><i class="fa fa-search"></i>
+    </div>
+  </div>
 </header>
 
 
